# html2text

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  mix.exs
.github/workflows/: release.yml
lib/: html2_text.ex
lib/html2_text/: html.ex
native/html2text_nif/: Cargo.toml
native/html2text_nif/src/: lib.rs
test/: html2_text_test.exs
