[package]
name = "html2text_nif"
version = "0.1.1"
authors = []
edition = "2021"

[lib]
name = "html2text_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36.2"
html2text = "0.15.1"

[features]
default = ["nif_version_2_16"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
